fix template size and align

--- a/assets/templates/classic/classic-screen.css
+++ b/assets/templates/classic/classic-screen.css
@@ -442,7 +442,7 @@ span{
   width:100%;
   height:100%;
 	position: absolute;
-	top: 1mm;
+	top: 0;
 	left: 0;
 	mix-blend-mode: screen;
 
